# wofa_ide

./: LICENSE  README.md  build.bat  build.py  build_installer.py  installer.py  pyproject.toml  wofa_ide.spec
docs/: User Manual-WOFA.docx  WOFA使用手冊.docx
lib/py_libraries/: ArrayOp.cp313-win_amd64.pyd  BleOp.cp313-win_amd64.pyd  CrawlOp.cp313-win_amd64.pyd  ExcelEncryptor.cp313-win_amd64.pyd  FileOp.cp313-win_amd64.pyd  FtpOp.cp313-win_amd64.pyd  HandlerOp.cp313-win_amd64.pyd  HttpOp.cp313-win_amd64.pyd  ImageOp.cp313-win_amd64.pyd  LanguageOp.cp313-win_amd64.pyd  LatexRenderer.cp313-win_amd64.pyd  MailOp.cp313-win_amd64.pyd  MarkdownParser.cp313-win_amd64.pyd  MathOp.cp313-win_amd64.pyd  PptxOp.cp313-win_amd64.pyd  ProcessOp.cp313-win_amd64.pyd  ReadOnlyTk.cp313-win_amd64.pyd  ServerFileApi.cp313-win_amd64.pyd  SftpOp.cp313-win_amd64.pyd  StreamingTextview.cp313-win_amd64.pyd  StringOp.cp313-win_amd64.pyd  SystemOp.cp313-win_amd64.pyd  TimeOp.cp313-win_amd64.pyd  TradeOp.cp313-win_amd64.pyd  UiOp.cp313-win_amd64.pyd  WebUiOp.cp313-win_amd64.pyd
lib/py_llm_api/: LLMS.cp313-win_amd64.pyd  LLM_BitNet.cp313-win_amd64.pyd  LLM_Claude.cp313-win_amd64.pyd  LLM_Cloud.cp313-win_amd64.pyd  LLM_Gemini.cp313-win_amd64.pyd  LLM_Grok.cp313-win_amd64.pyd  LLM_OpenAI.cp313-win_amd64.pyd  LLM_Qwen.cp313-win_amd64.pyd  LLM_RAG.cp313-win_amd64.pyd  LLM_Stability.cp313-win_amd64.pyd  LLM_Translate.cp313-win_amd64.pyd
lib/py_workflow/: py_workflow.cp313-win_amd64.pyd
src/wofa_ide/: app_info.py  editors.py  languages.xlsx  llm_api_urls.xlsx  settings.json  wofa_ide.py
